# grits

./: .gitignore  Cargo.toml  README.md
docs/: 2026-02-25-beads-analysis.md  2026-02-25-intent-wal-design.md  2026-02-25-merge-driver-evaluation.md  TEST_COVERAGE.md
src/: conflict.rs  id.rs  identity.rs  main.rs  store.rs  symbols.rs
src/commands/: agents.rs  blame.rs  check.rs  claim.rs  init.rs  log.rs  mod.rs  prime.rs  release.rs  status.rs  uninstall.rs
tests/: integration.rs
