[package]
name = "grits"
version = "0.1.0"
edition = "2024"
description = "Intent WAL for parallel AI agent coordination"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"
