[package]
name = "grits"
version = "0.1.0"
edition = "2024"
description = "Intent WAL for parallel AI agent coordination"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sysinfo = "0.33"

# Tree-sitter for symbol validation
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
tempfile = "3"
